@@ -1,3 +1,7 @@
+2011-10-20
+* add string constant extraction for Dalvik files, using dedexer. This needs
+to be added to bat-extratools
+
 2011-10-19
 * add string constant extraction for Java class files, so we can do better
 matching in the ranking code for Java.
